--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -52,12 +52,13 @@ $dark-gray                  : mix(#000, $gray, 40%);
 $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
+$white                      : #fff;
 
-$body-color                 : #fff;
-$background-color           : #fff;
+$body-color                 : #0a0f1e;
+$background-color           : #0a0f1e;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
-$text-color                 : $dark-gray;
+$text-color                 : $white;
 $border-color               : $lighter-gray;
 
 $primary-color              : #7a8288;
