--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -55,10 +55,10 @@ $lighter-gray               : mix(#fff, $gray, 90%);
 $white                      : #fff;
 
 $body-color                 : #0a0f1e;
-$background-color           : #0a0f1e;
+$background-color           : #0a0f1e !default;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
-$text-color                 : $white;
+$text-color                 : $white !default;
 $border-color               : $lighter-gray;
 
 $primary-color              : #7a8288;
