--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -7,7 +7,7 @@
    ========================================================================== */
 
 .sidebar {
-   background-color: #c4c9bb !important; /* Light green color */
+   background-color: #000 !important; /* Light green color */
   -webkit-transform: translate3d(0, 0 , 0);
           transform: translate3d(0, 0 , 0);
    height: 100%; /* Set height to 100% */
