--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -1,7 +1,9 @@
 /* ==========================================================================
    SIDEBAR
    ========================================================================== */
-
+body {
+   background-color: black !important;
+}
 /*
    Default
    ========================================================================== */
