--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -1,8 +1,9 @@
 /* ==========================================================================
    SIDEBAR
    ========================================================================== */
-body {
+html {
    background-color: black !important;
+   color: white !important;
 }
 /*
    Default
