--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -5,7 +5,7 @@ html {
   /* sticky footer fix */
   position: relative;
   min-height: 100%;
-   background-color: black !important;
+  background-color: black;
 }
 
 body {
