--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,11 +9,6 @@
  *  - https://twitter.com/mmistakes
  *
 */
-html {
-
-  background-color: black !important;
-  color: white !important;
-}
 @import "vendor/breakpoint/breakpoint"; // media query mixins
 @import "variables";
 @import "mixins";
@@ -21,6 +16,7 @@ html {
 
 @import "reset";
 @import "base";
+@import "custom/custom"
 
 @import "utilities";
 @import "animations";
