--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,7 +16,7 @@
 
 @import "reset";
 @import "base";
-@import "custom/custom"
+@import "custom/custom";
 
 @import "utilities";
 @import "animations";
