--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -26,7 +26,7 @@
         <li><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> {{ author.location }}</li>
       {% endif %}
       {% if author.school %}
-        <li><i class="fa-brands fa-orcid" aria-hidden="true"></i> {{ author.school }}</li>
+        <li><i class="fa-solid fa-graduation-cap" aria-hidden="true"></i> {{ author.school }}</li>
       {% endif %}
       {% if author.employer %}
         <li><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> {{ author.employer }}</li>
