--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -2,3 +2,9 @@ body {
   background-color: #0a0b10 !important;
   color: white !important;
 }
+::selection {
+  background-color: #324EA4 !important;
+  color: #fff !important;
+}
+
+
