--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -3,11 +3,11 @@ body {
   color: white !important;
 }
 ::selection {
-  background-color: #324EA4 !important;
-  color: #fff !important;
+  background-color: #324EA4;
+  color: #fff;
 }
 
 ::-moz-selection { /* Firefox */
-  background-color: #324EA4 !important;
-  color: #fff !important;
+  background-color: #324EA4;
+  color: #fff;
 }
