--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -54,8 +54,8 @@ $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 $white                      : #fff;
 
-$body-color                 : #0a0f1e;
-$background-color           : #0a0f1e !default;
+$body-color                 : #0a0b10;
+$background-color           : #0a0b10 !default;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
 $text-color                 : $white !default;
