--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -55,7 +55,7 @@ $lighter-gray               : mix(#fff, $gray, 90%);
 $white                      : #fff;
 
 $body-color                 : #0a0b10;
-$background-color           : #0a0b10 !default;
+$background-color           : #0a0b10;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
 $text-color                 : $white !default;
