--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -14,3 +14,10 @@ body {
 a {
   color: #91acff;
 }
+
+  @media (max-width: 700px) {
+    .site-img {
+      flex: 100% !important;
+      min-width: 100% !important;
+    }
+  }
