--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -20,4 +20,7 @@ a {
       flex: 100% !important;
       min-width: 100% !important;
     }
+    .grid-imgs {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
