--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -21,6 +21,6 @@ a {
       min-width: 100% !important;
     }
     .grid-imgs {
-      grid-template-columns: repeat(1, 1fr);
+      grid-template-columns: repeat(1, 1fr) !important;
     }
   }
