--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -14,6 +14,11 @@ body {
 a {
   color: #91acff;
 }
+.grid-imgs {
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+gap: 1rem;
+}
 
   @media (max-width: 700px) {
     .site-img {
