--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -15,9 +15,9 @@ a {
   color: #91acff;
 }
 .grid-imgs {
-display: grid;
-grid-template-columns: repeat(2, 1fr);
-gap: 1rem;
+display: grid !important;
+grid-template-columns: repeat(2, 1fr) !important;
+gap: 1rem !important;
 }
 
   @media (max-width: 700px) {
