--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -28,4 +28,9 @@ gap: 1rem !important;
     .grid-imgs {
       grid-template-columns: repeat(1, 1fr) !important;
     }
+    .grid-imgs div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
