--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #0a0b10 !important;
+  background-color: #3A3B51 !important;
   color: white !important;
 }
 ::selection {
